--- a/Writings/QCA/RoadMap.org
+++ b/Writings/QCA/RoadMap.org
@@ -40,3 +40,5 @@
 *** TODO Truth Table
 *** TODO Minimize
 *** TODO Analyze
+* TODO [#B] Macroprudential and house prices model cite:arena_2020_Macroprudential
+* TODO [#A] Milestones model cite:lunde_2016_Milestones
