Leitura e pequenas correções do manuscrito VECM.

--- a/Articles/VECM/Introduction.org
+++ b/Articles/VECM/Introduction.org
@@ -12,7 +12,7 @@ Despite the late interest in those expenditures cites:freitas_pattern_2013,girar
 Our main objective is to assess the determinants of residential investment growth rate.
 We argue that the scarce attention that residential investment receives is not compatible with its relevance for the US and its significance is not restricted to the Great Recession.
 In Section ref:sec:Stylized_Facts, we present some stylized facts for the US economy highlighting the relevance of residential investment.
-Next, in Section ref:sec:empirical_review}, we will present and compare different macroeconometric models that explicitly incorporate residential investment.
+Next, in Section ref:sec:empirical_review, we will present and compare different macroeconometric models that explicitly incorporate residential investment.
 In Section ref:sec:VECM, we estimate a bi-dimensional vector error-correction model (VECM) using time-series data for the US economy from 1992 onward to test the houses' own interest rate presented by textcite:teixeira_crescimento_2015. 
 Section ref:sec:Conclusion offers some concluding remarks.
 The results for all statistical tests are provided in Appendix ref:appen:A.
