--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -1,16 +1,25 @@
-#+TITLE: Long-run effective demand and residential investment: a Sraffian supermultiplier based analysis
-#+AUTHOR: Lucas Teixeira \and Gabriel Petrini
-#+EMAIL: lucas.teixeira@unicamp.br \and gpetrinidasilveira@gmail.com
-#+OPTIONS: toc:nil
+#+TITLE: Untitled
+#+OPTIONS: toc:nil author:nil
+#+LATEX_CLASS: article
+#+LATEX_CLASS_OPTIONS: [12pt, a4]
 #+LATEX_HEADER: \addbibresource{ref.bib}
-#+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable, authblk}
+#+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable}
 #+LATEX_HEADER: \newcolumntype{b}{>{\hsize=2.3\hsize}X}
 #+LATEX_HEADER: \newcolumntype{s}{>{\hsize=.45\hsize}X}
 #+LATEX_HEADER: \newcolumntype{m}{>{\hsize=.9\hsize}X}
 
+#+LATEX_HEADER: \usepackage{authblk}
 #+LATEX_HEADER: \usepackage[english]{babel}
+#+LATEX_HEADER:\author[1]{Gabriel Petrini}
+#+LATEX_HEADER:\affil[1]{PhD Student at University of Campinas (Brazil), Email: \url{gpetrinidasilveira@gmail.com}} % Author affiliation
+#+LATEX_HEADER:\author[2]{Lucas Teixeira}
+#+LATEX_HEADER:\affil[2]{Assistent Professor at University of Campinas (Brazil), Email: \url{lucastei@unicamp.br}} % Author affiliation
+#+LATEX_HEADER:\author[3]{Frankin Serrano}
+#+LATEX_HEADER:\affil[3]{Professor at Federal University of Rio de Janeiro (Brazil), Email: \url{}} % Author affiliation
+
 #+PROPERTY: header-args:python :python /usr/bin/python3 :exports none :eval never-export
 #+BIND: org-latex-prefer-user-labels t
+
 #+BEGIN_abstract
 This article investigates the relationship between residential investment, asset inflation, and macroeconomic dynamics based on
 the US post-deregulation case (1992-2019). To do so, we estimate a vector error correction model (VECM) to asses the relevance of
@@ -19,7 +28,7 @@ also find that that long-run causality goes unidirectionally from houses’ own 
 as expected. In summary, our findings support the relevance of houses’ own interest rate in determining residential investment
 while the other way round does not occur.
 	
-#+LATEX: \noindent \textbf{Keywords:} Residential Investment; Sraffian supermultiplier; Asset bubble;  Stock-Flow Consistent approach.
+#+LATEX: \noindent \textbf{Keywords:}
 #+END_abstract
 
 
