--- a/Articles/VECM/VECM.org
+++ b/Articles/VECM/VECM.org
@@ -4094,7 +4094,7 @@ We rely on the following  quarterly seasonally adjusted data: (i) 30-Year fixed 
 
 Next, we applied textcite:yeo_new_2000 transformation since these series are quite volatile. We use this procedure instead of a standard textcite:box_analysis_1964 transformation  because it can be applied to non-positive values. 
 Then, we employ standard unit root tests (see Table ref:unitroot in appendix ref:appen:A) as well as textcite:johansen_estimation_1991 procedure to assess whether houses' own interest rate and residential investment growth rate share a common long-run trend (see Table ref:Johansen in appendix ref:appen:A).
-Our series are co-integrated at 5\% significance level which allows us to estimate a error correction model and evaluate the previous hypothesis cite:enders_applied_2014.
+Our series are co-integrated at 5% significance level which allows us to estimate a error correction model and evaluate the previous hypothesis cite:enders_applied_2014.
 
 #+begin_export latex
 \begin{figure}[htb]
@@ -4131,9 +4131,7 @@ However, such series does not exist. So, we use lagged houses' own interest rate
 In summary, in the absence of a series for the expected own interest rate, the lag of this variable will be used as a proxy for the future one.
 ].
 
-In order to display the relation between lagged own interest rate and current residential investment growth rate, Figure \ref{defasagens} depicts one variable of interest against the other variable lagged according to lags that minimize the information criteria (1 and 4 respectively)\footnote{
-	Similar plot can be seen in \textcite[p.~16]{girardi_autonomous_2015}.
-}.
+In order to display the relation between lagged own interest rate and current residential investment growth rate, Figure \ref{defasagens} depicts one variable of interest against the other variable lagged according to lags that minimize the information criteria (1 and 4 respectively)[fn::Similar plot can be seen in \textcite[p.~16]{girardi_autonomous_2015}.].
 This simple procedure allows checking if there is any relationship between the expected own interest rate (in this case, lagged effective rate) and residential investment growth rate[fn::In order to consider non-linearities, we presented quadratic regression between variables of interest.].
 In the same Figure, we verify that the inverse relationship, that is, from residential investment to own interest rate, does not occur. 
 The lack of relationship in the opposite direction reflects a dynamics already mentioned before.
@@ -4166,8 +4164,8 @@ On the following subsection, we analyze the results and compare with the theoret
 
 According to parameters presented in Table ref:Estimacao, we find statistically significant co-integration  coefficients for both equations. 
 Therefore, both variables share a (negative) long-run trend (validating hypotheses 1 and 4).
-The short-term relationship between $own$ and $g_{Ih}$ ($\beta_{1, is}$ coefficients) are not statistically significant at 5\%[fn::The expected result (7) can also be validated from the inspection of Table ref:Estimacao in which only the fourth lag of own interest rate equation is statistically significant.].
-In addition, coefficients $\gamma_{2,s}$ are negative and statistically significant at 5\%, supporting hypothesis 6 (see Table  ref:Estimacao). 
+The short-term relationship between $own$ and $g_{Ih}$ ($\beta_{1, is}$ coefficients) are not statistically significant at 5%[fn::The expected result (7) can also be validated from the inspection of Table ref:Estimacao in which only the fourth lag of own interest rate equation is statistically significant.].
+In addition, coefficients $\gamma_{2,s}$ are negative and statistically significant at 5%, supporting hypothesis 6 (see Table  ref:Estimacao).
 We also find statistically significant coefficients related to demand for houses for non-speculative reasons ($\phi_0$), validating proposition 5.
 On the other hand, the error correction parameter is statistically significant only for the residential investment growth rate equation.
 In this sense, $own$ is weakly exogenous compared to $g_{I_h}$ while houses' own interest rate Granger-causes $g_{I_h}$, supporting the hypothesis (2) and (3).
@@ -4192,7 +4190,7 @@ In conclusion, our estimation results are in line with the hypothesis presented 
 
 Figure ref:fevd display the forecast error variance decomposition (FEVD) which reports houses own interest rate in describing residential investment growth rate dynamics[fn:: It is important to note that the number of variables (two) used generates similar  of a Structural VEC, which means that Choleski's decomposition is sufficient to analyze the (orthogonalized) impulse response function.].
 We report that own interest rate has  depicted  $g_{Ih}$ --- while the reverse is not valid --- after the first quarter.
-In addition, we find that such contribution is greater than 50\% beyond the third quarter.
+In addition, we find that such contribution is greater than 50% beyond the third quarter.
 Therefore, houses' own interest rate is explained mainly by itself and explains $g_{I_h}$ considerably.
 
 #+begin_export latex
